scikits/odes/sundials/idas/idas.h


typedef int (*IDAQuadSensRhsFn)(int Ns, realtype t,
                               N_Vector yy, N_Vector yp, 
                               N_Vector *yyS, N_Vector *ypS, 
                               N_Vector rrQ, N_Vector *rhsvalQS,
                               void *user_data,
                               N_Vector yytmp, N_Vector yptmp, N_Vector tmpQS);
typedef int (*IDAResFnB)(realtype tt, 
			 N_Vector yy, N_Vector yp,
			 N_Vector yyB, N_Vector ypB, 
                         N_Vector rrB, void *user_dataB);
typedef int (*IDAResFnBS)(realtype t, 
                          N_Vector yy, N_Vector yp, 
                          N_Vector *yyS, N_Vector *ypS,
                          N_Vector yyB, N_Vector ypB,
                          N_Vector rrBS, void *user_dataB);
typedef int (*IDAQuadRhsFnB)(realtype tt, 
                             N_Vector yy, N_Vector yp, 
                             N_Vector yyB, N_Vector ypB,
                             N_Vector rhsvalBQ, void *user_dataB);
typedef int (*IDAQuadRhsFnBS)(realtype t, 
                              N_Vector yy, N_Vector yp,
                              N_Vector *yyS, N_Vector *ypS,
                              N_Vector yyB, N_Vector ypB,
                              N_Vector rhsvalBQS, void *user_dataB);
SUNDIALS_EXPORT int IDAQuadSensInit(void *ida_mem, IDAQuadSensRhsFn resQS, N_Vector *yQS0);
SUNDIALS_EXPORT int IDAQuadSensReInit(void *ida_mem, N_Vector *yQS0);
SUNDIALS_EXPORT int IDAQuadSensSStolerances(void *ida_mem, realtype reltolQS, realtype *abstolQS);
SUNDIALS_EXPORT int IDAQuadSensSVtolerances(void *ida_mem, realtype reltolQS, N_Vector *abstolQS);
SUNDIALS_EXPORT int IDAQuadSensEEtolerances(void *ida_mem);
SUNDIALS_EXPORT int IDASetQuadSensErrCon(void *ida_mem, booleantype errconQS);
SUNDIALS_EXPORT int IDAGetSensNumResEvals(void *ida_mem, long int *nresSevals);
SUNDIALS_EXPORT int IDAGetNumResEvalsSens(void *ida_mem, long int *nresevalsS);
SUNDIALS_EXPORT int IDAGetSensNumErrTestFails(void *ida_mem, long int *nSetfails);
SUNDIALS_EXPORT int IDAGetSensNumLinSolvSetups(void *ida_mem, long int *nlinsetupsS);
SUNDIALS_EXPORT int IDAGetSensErrWeights(void *ida_mem, N_Vector_S eSweight);
SUNDIALS_EXPORT int IDAGetSensStats(void *ida_mem, long int *nresSevals, 
                                    long int *nresevalsS, 
                                    long int *nSetfails, 
                                    long int *nlinsetupsS);
SUNDIALS_EXPORT int IDAGetSensNumNonlinSolvIters(void *ida_mem, long int *nSniters);
SUNDIALS_EXPORT int IDAGetSensNumNonlinSolvConvFails(void *ida_mem, 
                                                     long int *nSncfails);
SUNDIALS_EXPORT int IDAGetSensNonlinSolvStats(void *ida_mem, 
                                              long int *nSniters, 
                                              long int *nSncfails);
SUNDIALS_EXPORT int IDAGetQuadSensNumRhsEvals(void *ida_mem, long int *nrhsQSevals);
SUNDIALS_EXPORT int IDAGetQuadSensNumErrTestFails(void *ida_mem, long int *nQSetfails);
SUNDIALS_EXPORT int IDAGetQuadSensErrWeights(void *ida_mem, N_Vector *eQSweight);
SUNDIALS_EXPORT int IDAGetQuadSensStats(void *ida_mem,
                                          long int *nrhsQSevals,
                                          long int *nQSetfails);
SUNDIALS_EXPORT int IDAGetQuadSens(void *ida_mem, realtype *tret, N_Vector *yyQSout);
SUNDIALS_EXPORT int IDAGetQuadSens1(void *ida_mem, realtype *tret, int is, N_Vector yyQSret);
SUNDIALS_EXPORT int IDAGetQuadSensDky(void *ida_mem, realtype t, int k, N_Vector *dkyQS);
SUNDIALS_EXPORT int IDAGetQuadSensDky1(void *ida_mem, realtype t, int k, int is, N_Vector dkyQS);
SUNDIALS_EXPORT void IDASensFree(void *ida_mem);
SUNDIALS_EXPORT void IDAQuadSensFree(void* ida_mem);
SUNDIALS_EXPORT int IDAAdjInit(void *ida_mem, long int steps, int interp);
SUNDIALS_EXPORT int IDAAdjReInit(void *ida_mem);
SUNDIALS_EXPORT void IDAAdjFree(void *ida_mem);
SUNDIALS_EXPORT int IDACreateB(void *ida_mem, int *which);
SUNDIALS_EXPORT int IDAInitB(void *ida_mem, int which, IDAResFnB resB,
                             realtype tB0, N_Vector yyB0, N_Vector ypB0);
SUNDIALS_EXPORT int IDAInitBS(void *ida_mem, int which, IDAResFnBS resS,
                              realtype tB0, N_Vector yyB0, N_Vector ypB0);
SUNDIALS_EXPORT int IDAReInitB(void *ida_mem, int which,
			       realtype tB0, N_Vector yyB0, N_Vector ypB0);
SUNDIALS_EXPORT int IDASStolerancesB(void *ida_mem, int which, 
                                     realtype relTolB, realtype absTolB);
SUNDIALS_EXPORT int IDASVtolerancesB(void *ida_mem, int which, 
                                     realtype relTolB, N_Vector absTolB);
SUNDIALS_EXPORT int IDAQuadInitB(void *ida_mem, int which, 
                                 IDAQuadRhsFnB rhsQB, N_Vector yQB0);
SUNDIALS_EXPORT int IDAQuadInitBS(void *ida_mem, int which, 
                                  IDAQuadRhsFnBS rhsQS, N_Vector yQB0);
SUNDIALS_EXPORT int IDAQuadReInitB(void *ida_mem, int which, N_Vector yQB0);
SUNDIALS_EXPORT int IDAQuadSStolerancesB(void *ida_mem, int which,
                                         realtype reltolQB, realtype abstolQB);
SUNDIALS_EXPORT int IDAQuadSVtolerancesB(void *ida_mem, int which,
                                         realtype reltolQB, N_Vector abstolQB);
SUNDIALS_EXPORT int IDACalcICB (void *ida_mem, int which, realtype tout1,
                                N_Vector yy0, N_Vector yp0);
SUNDIALS_EXPORT int IDACalcICBS(void *ida_mem, int which, realtype tout1,
                                N_Vector yy0, N_Vector yp0,
                                N_Vector *yyS0, N_Vector *ypS0);
SUNDIALS_EXPORT int IDASolveF(void *ida_mem, realtype tout, 
                              realtype *tret, 
                              N_Vector yret, N_Vector ypret, 
                              int itask, int *ncheckPtr);
SUNDIALS_EXPORT int IDASolveB(void *ida_mem, realtype tBout, int itaskB);
SUNDIALS_EXPORT int IDASetUserDataB(void *ida_mem, int which, void *user_dataB);
SUNDIALS_EXPORT int IDASetMaxOrdB(void *ida_mem, int which, int maxordB);
SUNDIALS_EXPORT int IDASetMaxNumStepsB(void *ida_mem, int which, long int mxstepsB);
SUNDIALS_EXPORT int IDASetInitStepB(void *ida_mem, int which, realtype hinB);
SUNDIALS_EXPORT int IDASetMaxStepB(void *ida_mem, int which, realtype hmaxB);
SUNDIALS_EXPORT int IDASetSuppressAlgB(void *ida_mem, int which, 
                                       booleantype suppressalgB);
SUNDIALS_EXPORT int IDASetIdB(void *ida_mem, int which, N_Vector idB);
SUNDIALS_EXPORT int IDASetConstraintsB(void *ida_mem, int which, 
                                       N_Vector constraintsB);
SUNDIALS_EXPORT int IDASetQuadErrConB(void *ida_mem, int which, int errconQB);
SUNDIALS_EXPORT int IDAGetB(void* ida_mem, int which, realtype *tret,
                            N_Vector yy, N_Vector yp);
SUNDIALS_EXPORT int IDAGetQuadB(void *ida_mem, int which, 
                                realtype *tret, N_Vector qB);
SUNDIALS_EXPORT void *IDAGetAdjIDABmem(void *ida_mem, int which);
SUNDIALS_EXPORT int IDAGetConsistentICB(void *ida_mem, int which, 
                                        N_Vector yyB0, N_Vector ypB0);
SUNDIALS_EXPORT int IDAGetAdjY(void *ida_mem, realtype t, 
                               N_Vector yy, N_Vector yp);
  typedef struct {
  void *my_addr;
  void *next_addr;
  realtype t0;
  realtype t1;
  long int nstep;
  int order;
  realtype step;
  } IDAadjCheckPointRec;
SUNDIALS_EXPORT int IDAGetAdjCheckPointsInfo(void *ida_mem, 
                                             IDAadjCheckPointRec *ckpnt);
SUNDIALS_EXPORT int IDAGetAdjDataPointHermite(void *ida_mem, long int which,
                                              realtype *t, N_Vector yy, N_Vector yd);
SUNDIALS_EXPORT int IDAGetAdjDataPointPolynomial(void *ida_mem, long int which,
                                                 realtype *t, int *order, 
                                                 N_Vector y);
SUNDIALS_EXPORT int IDAGetAdjCurrentCheckPoint(void *ida_mem, void **addr);