scikits/odes/sundials/c_idas.pxd


    int IDAGetSensNumResEvals(void *ida_mem, long int *nresSevals)
    int IDAGetNumResEvalsSens(void *ida_mem, long int *nresevalsS)
    int IDAGetSensNumErrTestFails(void *ida_mem, long int *nSetfails)
    int IDAGetSensNumLinSolvSetups(void *ida_mem, long int *nlinsetupsS)
    int IDAGetSensErrWeights(void *ida_mem, N_Vector_S eSweight)
    int IDAGetSensStats(void *ida_mem, long int *nresSevals,
                        long int *nresevalsS, long int *nSetfails,
                        long int *nlinsetupsS)
    int IDAGetSensNumNonlinSolvIters(void *ida_mem, long int *nSniters)
    int IDAGetSensNumNonlinSolvConvFails(void *ida_mem, long int *nSncfails)
    int IDAGetSensNonlinSolvStats(void *ida_mem, long int *nSniters,
                                  long int *nSncfails)

    void IDASensFree(void *ida_mem)


    # Exported Functions -- Sensitivity dependent quadrature
    int IDAQuadSensInit(void *ida_mem, IDAQuadSensRhsFn resQS,
                        N_Vector *yQS0)
    int IDAQuadSensReInit(void *ida_mem, N_Vector *yQS0)

    int IDAQuadSensSStolerances(void *ida_mem, sunrealtype reltolQS,
                                            sunrealtype *abstolQS)
    int IDAQuadSensSVtolerances(void *ida_mem, sunrealtype reltolQS,
                                N_Vector *abstolQS)
    int IDAQuadSensEEtolerances(void *ida_mem)

    int IDASetQuadSensErrCon(void *ida_mem, sunbooleantype errconQS)

    int IDAGetQuadSens(void *ida_mem, sunrealtype *tret, N_Vector *yyQSout)
    int IDAGetQuadSens1(void *ida_mem, sunrealtype *tret, int iss, N_Vector yyQSret) # rename is to iss, is protected in python
    int IDAGetQuadSensDky(void *ida_mem, sunrealtype t, int k, N_Vector *dkyQS)
    int IDAGetQuadSensDky1(void *ida_mem, sunrealtype t, int k, int iss,
                           N_Vector dkyQS) # rename is to iss, is protected in python

    int IDAGetQuadSensNumRhsEvals(void *ida_mem, long int *nrhsQSevals)
    int IDAGetQuadSensNumErrTestFails(void *ida_mem, long int *nQSetfails)
    int IDAGetQuadSensErrWeights(void *ida_mem, N_Vector *eQSweight)
    int IDAGetQuadSensStats(void *ida_mem,  long int *nrhsQSevals,
                            long int *nQSetfails)

    void IDAQuadSensFree(void* ida_mem)

    # Exported Functions -- Backward Problems
    int IDAAdjInit(void *ida_mem, long int steps, int interp)
    int IDAAdjReInit(void *ida_mem)
    void IDAAdjFree(void *ida_mem)

    int IDACreateB(void *ida_mem, int *which)
    int IDAInitB(void *ida_mem, int which, IDAResFnB resB,
                 sunrealtype tB0, N_Vector yyB0, N_Vector ypB0)
    int IDAInitBS(void *ida_mem, int which, IDAResFnBS resS,
                  sunrealtype tB0, N_Vector yyB0, N_Vector ypB0)
    int IDAReInitB(void *ida_mem, int which,
                            sunrealtype tB0, N_Vector yyB0, N_Vector ypB0)
    int IDASStolerancesB(void *ida_mem, int which,
                         sunrealtype relTolB, sunrealtype absTolB)
    int IDASVtolerancesB(void *ida_mem, int which,
                         sunrealtype relTolB, N_Vector absTolB)
    int IDAQuadInitB(void *ida_mem, int which,
                     IDAQuadRhsFnB rhsQB, N_Vector yQB0)
    int IDAQuadInitBS(void *ida_mem, int which,
                      IDAQuadRhsFnBS rhsQS, N_Vector yQB0)
    int IDAQuadReInitB(void *ida_mem, int which, N_Vector yQB0)
    int IDAQuadSStolerancesB(void *ida_mem, int which,
                             sunrealtype reltolQB, sunrealtype abstolQB)
    int IDAQuadSVtolerancesB(void *ida_mem, int which,
                             sunrealtype reltolQB, N_Vector abstolQB)

    int IDACalcICB (void *ida_mem, int which, sunrealtype tout1,
                    N_Vector yy0, N_Vector yp0)
    int IDACalcICBS(void *ida_mem, int which, sunrealtype tout1,
                    N_Vector yy0, N_Vector yp0,
                    N_Vector *yyS0, N_Vector *ypS0)

    int IDASolveF(void *ida_mem, sunrealtype tout, sunrealtype *tret,
                  N_Vector yret, N_Vector ypret, int itask, int *ncheckPtr)

    int IDASolveB(void *ida_mem, sunrealtype tBout, int itaskB)

    int IDAAdjSetNoSensi(void *ida_mem)

    int IDASetUserDataB(void *ida_mem, int which, void *user_dataB)
    int IDASetMaxOrdB(void *ida_mem, int which, int maxordB)
    int IDASetMaxNumStepsB(void *ida_mem, int which, long int mxstepsB)
    int IDASetInitStepB(void *ida_mem, int which, sunrealtype hinB)
    int IDASetMaxStepB(void *ida_mem, int which, sunrealtype hmaxB)
    int IDASetSuppressAlgB(void *ida_mem, int which, sunbooleantype suppressalgB)
    int IDASetIdB(void *ida_mem, int which, N_Vector idB)
    int IDASetConstraintsB(void *ida_mem, int which, N_Vector constraintsB)
    int IDASetQuadErrConB(void *ida_mem, int which, int errconQB)

    int IDASetNonlinearSolverB(void *ida_mem, int which, SUNNonlinearSolver NLS)

    int IDAGetB(void* ida_mem, int which, sunrealtype *tret,
                N_Vector yy, N_Vector yp)
    int IDAGetQuadB(void *ida_mem, int which, sunrealtype *tret, N_Vector qB)

    void *IDAGetAdjIDABmem(void *ida_mem, int which)

    int IDAGetConsistentICB(void *ida_mem, int which, 
                            N_Vector yyB0, N_Vector ypB0)

    int IDAGetAdjY(void *ida_mem, sunrealtype t, N_Vector yy, N_Vector yp)

    struct _IDAadjCheckPointRec:
        void *my_addr
        void *next_addr
        sunrealtype t0
        sunrealtype t1
        long int nstep
        int order
        sunrealtype step

    ctypedef _IDAadjCheckPointRec IDAadjCheckPointRec
    
    int IDAGetAdjCheckPointsInfo(void *ida_mem, IDAadjCheckPointRec *ckpnt)

    int IDAGetAdjDataPointHermite(void *ida_mem, int which,
                                  sunrealtype *t, N_Vector yy, N_Vector yd)

    int IDAGetAdjDataPointPolynomial(void *ida_mem, int which,
                                     sunrealtype *t, int *order, N_Vector y)

    int IDAGetAdjCurrentCheckPoint(void *ida_mem, void **addr)


cdef extern from "idas/idas_ls.h":
    enum: IDALS_SUCCESS          # 0
    enum: IDALS_MEM_NULL         #-1
    enum: IDALS_LMEM_NULL        #-2
    enum: IDALS_ILL_INPUT        #-3
    enum: IDALS_MEM_FAIL         #-4
    enum: IDALS_PMEM_NULL        #-5
    enum: IDALS_JACFUNC_UNRECVR  #-6
    enum: IDALS_JACFUNC_RECVR    #-7
    enum: IDALS_SUNMAT_FAIL      #-8
    enum: IDALS_SUNLS_FAIL       #-9

    enum: IDALS_NO_ADJ          # -101
    enum: IDALS_LMEMB_NULL      # -102

    ctypedef int (*IDALsJacFn)(sunrealtype t, sunrealtype c_j, N_Vector y,
                               N_Vector yp, N_Vector r, SUNMatrix Jac,
                               void *user_data, N_Vector tmp1,
                               N_Vector tmp2, N_Vector tmp3)

    ctypedef int (*IDALsPrecSetupFn)(sunrealtype tt, N_Vector yy,
                                    N_Vector yp, N_Vector rr,
                                    sunrealtype c_j, void *user_data)

    ctypedef int (*IDALsPrecSolveFn)(sunrealtype tt, N_Vector yy,
                                    N_Vector yp, N_Vector rr,
                                    N_Vector rvec, N_Vector zvec,
                                    sunrealtype c_j, sunrealtype delta,
                                    void *user_data)

    ctypedef int (*IDALsJacTimesSetupFn)(sunrealtype tt, N_Vector yy,
                                        N_Vector yp, N_Vector rr,
                                        sunrealtype c_j, void *user_data) except? -1

    ctypedef int (*IDALsJacTimesVecFn)(sunrealtype tt, N_Vector yy,
                                      N_Vector yp, N_Vector rr,
                                      N_Vector v, N_Vector Jv,
                                      sunrealtype c_j, void *user_data,
                                      N_Vector tmp1, N_Vector tmp2) except? -1

    int IDASetLinearSolver(void *ida_mem, SUNLinearSolver LS, SUNMatrix A)
    
    int IDASetJacFn(void *ida_mem, IDALsJacFn jac)
    int IDASetPreconditioner(void *ida_mem, IDALsPrecSetupFn pset,
                             IDALsPrecSolveFn psolve)
    int IDASetJacTimes(void *ida_mem, IDALsJacTimesSetupFn jtsetup,
                       IDALsJacTimesVecFn jtimes)
    int IDASetEpsLin(void *ida_mem, sunrealtype eplifac)
    int IDASetIncrementFactor(void *ida_mem, sunrealtype dqincfac)

    int IDAGetLinWorkSpace(void *ida_mem, long int *lenrwLS, long int *leniwLS)
    int IDAGetNumJacEvals(void *ida_mem, long int *njevals)
    int IDAGetNumPrecEvals(void *ida_mem, long int *npevals)
    int IDAGetNumPrecSolves(void *ida_mem, long int *npsolves)
    int IDAGetNumLinIters(void *ida_mem, long int *nliters)
    int IDAGetNumLinConvFails(void *ida_mem, long int *nlcfails)
    int IDAGetNumJTSetupEvals(void *ida_mem, long int *njtsetups)
    int IDAGetNumJtimesEvals(void *ida_mem, long int *njvevals)
    int IDAGetNumLinResEvals(void *ida_mem, long int *nrevalsLS)
    int IDAGetLastLinFlag(void *ida_mem, long int *flag)
    char *IDAGetLinReturnFlagName(long int flag)

    ctypedef int (*IDALsJacFnB)(sunrealtype tt, sunrealtype c_jB, N_Vector yy,
                                N_Vector yp, N_Vector yyB, N_Vector ypB,
                                N_Vector rrB, SUNMatrix JacB,
                                void *user_dataB, N_Vector tmp1B,
                                N_Vector tmp2B, N_Vector tmp3B)
    
    ctypedef int (*IDALsJacFnBS)(sunrealtype tt, sunrealtype c_jB, N_Vector yy,
                                 N_Vector yp, N_Vector *yS, N_Vector *ypS,
                                 N_Vector yyB, N_Vector ypB, N_Vector rrB,
                                 SUNMatrix JacB, void *user_dataB,
                                 N_Vector tmp1B, N_Vector tmp2B,
                                 N_Vector tmp3B)
    
    ctypedef int (*IDALsPrecSetupFnB)(sunrealtype tt, N_Vector yy,
                                      N_Vector yp, N_Vector yyB,
                                      N_Vector ypB, N_Vector rrB,
                                      sunrealtype c_jB, void *user_dataB)
    
    ctypedef int (*IDALsPrecSetupFnBS)(sunrealtype tt, N_Vector yy,
                                       N_Vector yp, N_Vector *yyS,
                                       N_Vector *ypS, N_Vector yyB,
                                       N_Vector ypB, N_Vector rrB,
                                       sunrealtype c_jB, void *user_dataB)
    
    ctypedef int (*IDALsPrecSolveFnB)(sunrealtype tt, N_Vector yy,
                                      N_Vector yp, N_Vector yyB,
                                      N_Vector ypB, N_Vector rrB,
                                      N_Vector rvecB, N_Vector zvecB,
                                      sunrealtype c_jB, sunrealtype deltaB,
                                      void *user_dataB)
    
    ctypedef int (*IDALsPrecSolveFnBS)(sunrealtype tt, N_Vector yy,
                                       N_Vector yp, N_Vector *yyS,
                                       N_Vector *ypS, N_Vector yyB,
                                       N_Vector ypB, N_Vector rrB,
                                       N_Vector rvecB, N_Vector zvecB,
                                       sunrealtype c_jB, sunrealtype deltaB,
                                       void *user_dataB)
    
    ctypedef int (*IDALsJacTimesSetupFnB)(sunrealtype t, N_Vector yy,
                                          N_Vector yp, N_Vector yyB,
                                          N_Vector ypB, N_Vector rrB,
                                          sunrealtype c_jB, void *user_dataB)
    
    ctypedef int (*IDALsJacTimesSetupFnBS)(sunrealtype t, N_Vector yy,
                                           N_Vector yp, N_Vector *yyS,
                                           N_Vector *ypS, N_Vector yyB,
                                           N_Vector ypB, N_Vector rrB,
                                           sunrealtype c_jB, void *user_dataB)
